Update the UI to look more pleasent

--- a/app/popup.html
+++ b/app/popup.html
@@ -9,32 +9,65 @@
 		<script src="scripts/app.js"></script>
 	</head>
 	<body ng-app="App">
-		<h4>{{statusMessage}}</h4>
 		<div ng-controller="LoginController as Login">
-			<button ng-click="Login.launch()" ng-show="!loggedIn">Login</button>
+			<div ng-show="!loggedIn" class="header">{{statusMessage}}</div>
+			<div class="center">
+				<button class="button" ng-click="Login.launch()" ng-show="!loggedIn">Login</button>
+			</div>
 		</div>{{mainMenu}}
 		<div ng-show="mainMenu" ng-controller="MainMenuController as Main" style="padding:10px">
-			<h3>Torrents added</h3>
-			<ul>
-				<li ng-repeat="torrent in addedTorrents">{{torrent.name}}
-					<button ng-click="Main.remove($index)">x</button>
-				</li>
-			</ul>
-			<h3>Torrents in progresss</h3>
-			<h4>Active</h4>
-			<ul>
-				<li ng-repeat="torrent in active">{{torrent.name}} | {{torrent.downloadedPart * 100}}%</li>
-			</ul>
-			<ul>
-				<h4>Waiting</h4>
-				<li ng-repeat="torrent in waiting">{{torrent.name}}</li>
-			</ul>
-			<ul>
-				<h4>Finished</h4>
-				<li ng-repeat="torrent in finished">{{torrent.name}}</li>
-			</ul>
-			<div class="row">
-				<button ng-click="Main.queue()">Queue</button>
+			<div class="tableWrapper">
+				<div class="header">Waiting to be queued</div>
+				<table>
+					<tr>
+						<th>Name</th>
+						<th>Remove</th>
+					</tr>
+					<tr ng-repeat="torrent in addedTorrents">
+						<td>{{torrent.name}}</td>
+						<td>
+							<button ng-click="Main.remove($index)">x</button>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div class="center">
+				<button class="button" ng-click="Main.queue()">Queue</button>
+			</div>
+			<div class="tableWrapper">
+				<div class="header">Active</div>
+				<table>
+					<tr>
+						<th>Name</th>
+						<th>Status</th>
+					</tr>
+					<tr ng-repeat="torrent in active">
+						<td>{{torrent.name}}</td>
+						<td>{{torrent.downloadedPart * 100}}%</td>
+					</tr>
+				</table>
+			</div>
+			<div class="tableWrapper">
+				<div class="header">Waiting</div>
+				<table>
+					<tr>
+						<th>Name</th>
+					</tr>
+					<tr ng-repeat="torrent in waiting">
+						<td>{{torrent.name}}</td>
+					</tr>
+				</table>
+			</div>
+			<div class="tableWrapper">
+				<div class="header">Recently Downloaded</div>
+				<table>
+					<tr>
+						<th>Name</th>
+					</tr>
+					<tr ng-repeat="torrent in finished">
+						<td>{{torrent.name}}</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 	</body>
