--- a/app/popup.html
+++ b/app/popup.html
@@ -20,10 +20,10 @@
 	</div>{{mainMenu}}
 	<div ng-show="mainMenu" ng-controller="MainMenuController as Main" style="padding:10px">
 		<div class="navList">
-			<span class="nav" ng-click='currentTab="active"'> <span class="navItem"> Active </span> </span>
-			<span class="nav" ng-click='currentTab="added"'> <span class="navItem"> Added </span></span>
-			<span class="nav" ng-click='currentTab="waiting"'><span class="navItem"> Waiting </span> </span>
-			<span class="nav" ng-click='currentTab="downloaded"'> <span class="navItem"> Downloaded </span> </span>
+			<span class="nav" ng-click='currentTab="active"'> <span class="navItem"> Active({{activeCount}}) </span> </span>
+			<span class="nav" ng-click='currentTab="added"'> <span class="navItem"> Added({{addedCount}}) </span></span>
+			<span class="nav" ng-click='currentTab="waiting"'><span class="navItem"> Waiting({{waitingCount}}) </span> </span>
+			<span class="nav" ng-click='currentTab="downloaded"'> <span class="navItem"> Finished({{downloadedCount}}) </span> </span>
 		</div>
 		<div class="tabs" ng-switch="currentTab" ng-init='currentTab="active"'>
 			<div ng-switch-when="active" class="tableWrapper">
