Adds load indicators

--- a/app/popup.html
+++ b/app/popup.html
@@ -20,10 +20,10 @@
 	</div>{{mainMenu}}
 	<div ng-show="mainMenu" ng-controller="MainMenuController as Main" style="padding:10px">
 		<div class="navList">
-			<span class="nav" ng-click='currentTab="active"'> <span class="navItem"> Active({{activeCount}}) </span> </span>
-			<span class="nav" ng-click='currentTab="added"'> <span class="navItem"> Added({{addedCount}}) </span></span>
-			<span class="nav" ng-click='currentTab="waiting"'><span class="navItem"> Waiting({{waitingCount}}) </span> </span>
-			<span class="nav" ng-click='currentTab="downloaded"'> <span class="navItem"> Finished({{downloadedCount}}) </span> </span>
+			<span class="nav" ng-class="{loading: tab['active'].loading}" ng-click='currentTab="active"'> <span class="navItem"> Active{{tab['active'].loading ? "":'('+tab['active'].count+')'}} </span> </span>
+			<span class="nav" ng-class="{loading: tab['added'].loading}" ng-click='currentTab="added"'> <span class="navItem"> Added{{tab['added'].loading ? "":'('+tab['added'].count+')'}}</span></span>
+			<span class="nav" ng-class="{loading: tab['waiting'].loading}" ng-click='currentTab="waiting"'><span class="navItem"> Waiting{{tab['waiting'].loading ? "":'('+tab['waiting'].count+')'}} </span> </span>
+			<span class="nav" ng-class="{loading: tab['finished'].loading}" ng-click='currentTab="downloaded"'> <span class="navItem"> Finished{{tab['finished'].loading ? "":'('+tab['finished'].count+')'}} </span> </span>
 		</div>
 		<div class="tabs" ng-switch="currentTab" ng-init='currentTab="active"'>
 			<div ng-switch-when="active" class="tableWrapper">
